# time_off_planning_system

./: .gitignore  README.md  launcher.sh  plan.md  pyproject.toml  rxconfig.py
flet_app/: .gitignore  HOW_TO_RUN.md  HOW_TO_RUN_EN.md  README.md  README_EN.md  api_client.py  i18n.py  main.py
time_off_planning_system/: api.py  i18n.py  store.py  time_off_planning_system.py
time_off_planning_system/components/: layout.py  navbar.py
time_off_planning_system/states/: admin_state.py  auth_state.py  calendar_state.py  lang_state.py  leave_state.py  message_state.py
