[tool.poetry]
name = "time-off-planning-system"
version = "0.1.0"
description = "Time Off Planning System built with Python Reflex"
authors = []
readme = "README.md"
packages = [{include = "time_off_planning_system"}]

[tool.poetry.dependencies]
python = "~3.11"
reflex = "0.8.26"
flet = "*"
httpx = "*"
uvicorn = "*"
fastapi = "*"

[tool.poetry.group.dev.dependencies]
playwright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
